--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
-    "next": "13.4.9",
+    "next": "^13.4.13-canary.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.64.1",
     "tailwindcss": "3.3.2"
   }
 }
