--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
+  },
   "name": "share_prompt",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +25,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "sass": "^1.64.1",
     "tailwindcss": "3.3.2"
