--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "framer-motion": "^10.15.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
     "next": "^13.4.13-canary.6",
