--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.3.3",
     "next": "^13.4.13-canary.6",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
